added banner content

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architect</title>
+    <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-title">
             <h3>Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
@@ -16,6 +17,16 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group Of Architects</h1>
+                <p class="banner-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime distinctio excepturi vitae illo dolores eum ea quos obcaecati quia!3
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
