--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+    <!-- header section started -->
     <header>
         <nav class="nav-title">
             <h3>Architects</h3>
@@ -28,8 +29,24 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
-    <main>
+    <!-- header section edn -->
 
+    <!-- main section started -->
+    <main>
+        <!-- teams section started -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span class="of-our">of our</span> <span class="text-features">features</span></h3>
+                <p class="teams-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et accusantium, voluptas nobis sint quidem sequi dolores. Enim, accusantium deserunt!</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
