finished teams section with responsive layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group Of Architects</h1>
-                <p class="banner-description">
+                <p class="text-light-gray">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime distinctio excepturi vitae illo dolores eum ea quos obcaecati quia!3
                 </p>
                 <button class="btn-primary">Explore More</button>
@@ -42,8 +42,8 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span class="of-our">of our</span> <span class="text-features">features</span></h3>
-                <p class="teams-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et accusantium, voluptas nobis sint quidem sequi dolores. Enim, accusantium deserunt!</p>
+                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span> <span class="of-our">of our</span> <span class="text-features">features</span></h3>
+                <p class="text-light-gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et accusantium, voluptas nobis sint quidem sequi dolores. Enim, accusantium deserunt!</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
