added common sheared styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- header section started -->
     <header>
-        <nav class="nav-title">
+        <nav class="section-title">
             <h3>Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
@@ -47,6 +47,18 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+        <!-- features section -->
+         <section class="feature">
+         </section>
+
+         <!-- Facts section -->
+          <section class="fact">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, saepe est vero magnam voluptas nostrum dolorem.
+            </p>
+          </section>
     </main>
     <footer>
 
