--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
             <p class="text-light-gray">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, saepe est vero magnam voluptas nostrum dolorem.
             </p>
+            <div class="facts-card-container">
+                <!-- .card*4>img+h3.card-stats+p.card-title -->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="card-stats">54</h3>
+                    <p class="card-title text-light-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="card-stats">1458</h3>
+                    <p class="card-title text-light-gray">Projects Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="card-stats">590</h3>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="card-stats">22578</h3>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+            </div>
           </section>
     </main>
     <footer>
