--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
                 </div>
             </div>
           </section>
+
+          <!-- sponsors section -->
+           <section class="sponsors">
+            <h3 class="section-title">Our sponsors</h3>
+            <p class="text-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque fuga exercitationem, possimus atque labore reprehenderit sunt!
+            </p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+           </section>
     </main>
     <footer>
 
