added the section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 
         <!-- features section -->
          <section class="feature">
+            <div class="feature-content">
+                <h3 class="section-title">
+                    Features You Will  Love & Enjoy
+                </h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur quo, natus velit nam eveniet laboriosam in voluptatibus nemo, facere illo voluptatum alias, aspernatur corporis iusto aliquam assumenda commodi repellendus dolores.</p>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+            </div>
          </section>
 
          <!-- Facts section -->
