added ten+ years badges

--- a/index.html
+++ b/index.html
@@ -52,12 +52,47 @@
          <section class="feature">
             <div class="feature-content">
                 <h3 class="section-title">
-                    Features You Will  Love & Enjoy
+                    Features You Will <br>Love & Enjoy
                 </h3>
-                <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur quo, natus velit nam eveniet laboriosam in voluptatibus nemo, facere illo voluptatum alias, aspernatur corporis iusto aliquam assumenda commodi repellendus dolores.</p>
+                <p class="text-light-gray">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur quo, natus velit nam eveniet laboriosam in voluptatibus nemo, facere illo voluptatum alias, aspernatur corporis iusto aliquam assumenda commodi repellendus dolores.
+                </p>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum earum itaque sint voluptatum. Reiciendis excepturi porro nostrum hic qui.
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum earum itaque sint voluptatum. Reiciendis excepturi porro nostrum hic qui.
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum earum itaque sint voluptatum. Reiciendis excepturi porro nostrum hic qui.
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum earum itaque sint voluptatum. Reiciendis excepturi porro nostrum hic qui.
+                    </p>
+                </div>
+
             </div>
             <div class="feature-img">
                 <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>
+                        10+ Years
+                    </h2>
+                    <p>
+                        Experience
+                    </p>
+                </div>
             </div>
          </section>
 
