--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
            </section>
     </main>
     <footer>
-
+        <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi amet rem natus quisquam magnam!</p>
     </footer>
 </body>
 </html>
